# ai-reality-check

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  DOCKER.md  Dockerfile  LICENSE  README.md  UI_GUIDE.md  commit-msg.txt  docker-compose.yml  pyproject.toml  test_analysis.py
.github/: AI_INSTRUCTIONS.md  BRANCH_PROTECTION.md  CODEOWNERS  copilot-instructions.md
.github/workflows/: ci.yml  pr-checks.yml
config/: domain.yaml  user_preferences.yaml
data/results/: .gitkeep
scripts/: check_inclusive_language.py
src/: __init__.py
src/analyzers/: __init__.py  feasibility_analyzer.py
src/prompts/: reality_check.txt
src/ui/: __init__.py  server.py
src/ui/templates/: chat.html  index.html  results.html
src/utils/: __init__.py  archive_handler.py
tests/: test_archive_handler.py  test_e2e_analysis_chat.py  test_file_processing.py  test_metadata_performance.py  test_server_integration.py  test_server_routes.py
